# sobits_vla_tools

./: .gitignore  README.md  README_en.md  install.sh
sobits_vla_deploy/: CMakeLists.txt  package.xml  setup.cfg  setup.py
sobits_vla_deploy/config/: robot_config.yaml
sobits_vla_deploy/sobits_vla_deploy/: smol_vla_deploy.py
sobits_vla_rosbag_collection/: CMakeLists.txt  package.xml
sobits_vla_rosbag_collection/config/: record_settings.yaml  record_settings_sobit_light.yaml
sobits_vla_rosbag_collection/include/sobits_vla_rosbag_collection/: gamepad_clt.hpp  rosbag_collection.hpp
sobits_vla_rosbag_collection/launch/: rosbag_collection.launch.py
sobits_vla_rosbag_collection/src/: gamepad_clt.cpp  rosbag_collection.cpp
sobits_vla_rosbag_conversion/: CMakeLists.txt  install.sh  package.xml  ros2bag_to_lerobotdataset.py
sobits_vla_rosbag_conversion/config/: convert_settings.yaml
sobits_vla_rosbag_conversion/template_info/: default_info.json  sobit_light_info.json  sobit_light_info_4cameras.json
sobits_vla_tools/: CMakeLists.txt  package.xml
sobits_vla_training/: CMakeLists.txt  package.xml
sobits_vla_visualization/: CMakeLists.txt  package.xml
