<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sobits_vla_visualization</name>
  <version>0.1.0</version>
  <description>
    ROS packages for SOBITS VLA Visualization.
  </description>

  <maintainer email="kvalentincardenas@gmail.com">VALENTIN Keith</maintainer>

  <license>BSD</license>

  <url type="website">https://home.soka.ac.jp/~choi/index.html</url>
  <url type="repository">https://github.com/TeamSOBITS/sobits_vla_tools</url>
  <url type="bugtracker">https://github.com/TeamSOBITS/sobits_vla_tools/issues</url>

  <author email="team.sobits@gmail.com">Team SOBITS</author>
  <author email="kvalentincardenas@gmail.com">VALENTIN Keith</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- <depend>TODO</depend> -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
